# RUST-Deluxe-guess-the-number

./: Cargo.toml  README.md  main.rs
binaries/LINUX/: number  raten  results.txt
src/: lib.rs  main.rs  main.rs~  results.txt
