[package]
name = "number"
version = "0.1.6"
edition = "2021"

[lib]
name = "number"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
version = "0.8.3"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["blt-backend"]

[dependencies.chrono]
version = "0.4"

